Tue Jan 23 11:24:13 GMT 2001 Olly Betts

	* Tiny tweak to da_document.cc.

Fri Jan 19 18:36:15 GMT 2001 Chris Emerson <chris.emerson@open.muscat.com>

	* Removed get/set vector methods from OmSettings

	* Remote/prog arguments now passed in a string separated be spaces,
	  not a vector.
	
	* split_words() moved from netutils.h to utils.{h,cc}

	* Some unnecessary #include <vector> lines removed from API headers

	* Removed get_config_vector() from OmIndexerNode

	* OmConstantNode no longer handles vector values, and
	  OmStopWordNode and OmSelectItemsNode use space-separated
	  values instead.

Thu Jan 18 17:31:55 GMT 2001 Chris Emerson <chris.emerson@open.muscat.com>

	* Removed mentions of std::vector from OmIndexerMessage, and
	  updated the relevant bits.

	* Fixed a bug with the copy-on-write parts of OmIndexerMessage.

Thu Jan 18 17:09:43 GMT 2001  Richard Boulton <richard.boulton@open.muscat.com>

	* Fix to btreetest.cc: shouldn't fail if test data files are not
	  available.

	* Fix to multimatch.cc: clamp hits values to number of documents
	  matched after collapsing and match functors, rather than before.

Thu Jan 18 14:13:21 GMT 2001  Richard Boulton <richard.boulton@open.muscat.com>

	* Fix error messages thrown by quartz when a database doesn't exist /
	  already exists and isn't to be overwritten.

	* Make quartz clean up an old database directory, if
	  database_allow_overwrite is specified, so that old base files don't
	  confuse things.

Wed Jan 17 18:18:50 GMT 2001  Richard Boulton <richard.boulton@open.muscat.com>

	* Added all used toplevel directories to DIST_SUBDIRS

Wed Jan 17 18:13:50 GMT 2001  Richard Boulton <richard.boulton@open.muscat.com>

	* Martin committed changes to btree.cc which should fix some random
	  problems experienced with quartz.

	* Added in a test framework for the btree code, which exhibited the
	  bug fixed by martin until updating to his fixed version.
